--- a/epidemic_back/epidemic-admin/src/main/resources/static/register.html
+++ b/epidemic_back/epidemic-admin/src/main/resources/static/register.html
@@ -17,7 +17,7 @@
 
   function refresh(){
     $.ajax({
-      url:"kaptcha",
+      url:"http://localhost:8088/kaptcha",
       success:function(data,status,xmlhttp){
         //data代表的是验证码
         $("#captcha").attr("src",data.captcha);
@@ -36,6 +36,7 @@
     var password = hex_md5(originPassword);//第一次加密，传递给后台的是加密后的密码
 
     var username = $("input[name='username']").val();
+    console.log(password);
 
     $.ajax({
       url:"register",
